[gd_scene load_steps=11 format=3 uid="uid://btvurdtowism0"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_xla4c"]
[ext_resource type="AudioStream" uid="uid://cgjnnyb05mbj" path="res://assets/menu_song.mp3" id="2_3kesj"]
[ext_resource type="Texture2D" uid="uid://bb3rhnjhuedr2" path="res://assets/Play_button.png" id="2_kuxlo"]
[ext_resource type="Texture2D" uid="uid://rxbjouhc6ffn" path="res://assets/Undertale_title.png" id="3_3qg2n"]
[ext_resource type="Texture2D" uid="uid://blwt31rnqjou1" path="res://assets/play_button_blur.png" id="3_6j2sr"]
[ext_resource type="Texture2D" uid="uid://bem48x0dp1bgc" path="res://assets/Settings.png" id="4_bvrrq"]
[ext_resource type="Texture2D" uid="uid://cv41fvj6fm67k" path="res://assets/Settings_blur.png" id="5_pnf71"]
[ext_resource type="Texture2D" uid="uid://s3dp8xglp11x" path="res://assets/Quit.png" id="6_vcdvj"]
[ext_resource type="Texture2D" uid="uid://chgs4shyx062a" path="res://assets/About.png" id="7_s870f"]
[ext_resource type="FontFile" uid="uid://p63ukbvo7s51" path="res://assets/DeterminationSansWebRegular-369X.ttf" id="9_ng0cr"]

[node name="Main Menu" type="Node2D"]
script = ExtResource("1_xla4c")

[node name="Button_manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 464.0
offset_top = 232.0
offset_right = 679.0
offset_bottom = 295.0
texture_normal = ExtResource("2_kuxlo")
texture_pressed = ExtResource("3_6j2sr")

[node name="Settings" type="TextureButton" parent="Button_manager"]
layout_mode = 0
offset_left = 374.0
offset_top = 367.0
offset_right = 786.0
offset_bottom = 491.0
texture_normal = ExtResource("4_bvrrq")
texture_pressed = ExtResource("5_pnf71")

[node name="Quit" type="TextureButton" parent="Button_manager"]
layout_mode = 1
offset_left = 1101.0
offset_right = 1151.0
offset_bottom = 53.0
texture_normal = ExtResource("6_vcdvj")

[node name="About" type="TextureButton" parent="Button_manager"]
visible = false
layout_mode = 0
offset_left = 3.0
offset_top = 619.0
offset_right = 129.0
offset_bottom = 649.0
texture_normal = ExtResource("7_s870f")

[node name="Menu music" type="AudioStreamPlayer2D" parent="."]
visible = false
stream = ExtResource("2_3kesj")
autoplay = true
bus = &"Music"

[node name="Menu Text" type="Area2D" parent="."]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="Menu Text"]
visible = false
position = Vector2(990, 354.375)
scale = Vector2(0.514, 0.526397)
texture = ExtResource("3_3qg2n")

[node name="Label" type="Label" parent="."]
offset_left = 1053.0
offset_top = 630.0
offset_right = 1249.0
offset_bottom = 686.0
theme_override_fonts/font = ExtResource("9_ng0cr")
theme_override_font_sizes/font_size = 15
text = "made by @lslater"

[connection signal="pressed" from="Button_manager/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Button_manager/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Button_manager/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Button_manager/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="Button_manager/About" to="." method="_on_start_pressed"]
